Write interface ProgresViewer and testing it